--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -48,7 +48,7 @@ jobs:
  CD:
     runs-on: ubuntu-latest
     needs:
-      - CI-1tier-app
+      - CI-iti
     steps:
       - name: clone repo
         uses: actions/checkout@v4
