--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -47,8 +47,8 @@ jobs:
         tags: mohamed846/iti:${{ github.run_number }}
  CD:
     runs-on: ubuntu-latest
-    #needs:
-     # - CI-iti
+    needs:
+      - CI-iti
     steps:
       - name: clone repo
         uses: actions/checkout@v4
@@ -128,5 +128,5 @@ jobs:
 
             # Port forward (detached)
             sudo -E nohup kubectl port-forward service/service-web 8080:6000 > forward.log 2>&1 &
-            sudo docker run --name test -p 7000:8000 mohamed846/iti:2
+            sudo docker run -d --name test -p 7000:8000 mohamed846/iti:2
           EOF
